# ruy

./: .bazelrc  .gitignore  .gitmodules  BUILD  CMakeLists.txt  MODULE.bazel  README.md  WORKSPACE  allocator.cc  allocator.h  allocator_test.cc  benchmark.cc  block_map.cc  block_map.h  block_map_test.cc  blocking_counter.cc  blocking_counter.h  build_defs.bzl  check_macros.h  check_macros_test.cc  common.h  context.cc  context.h  context_test.cc  cpu_cache_size.h  detect_arm.cc  detect_dotprod.cc  detect_dotprod.h  detect_x86.cc  detect_x86.h  dispatch.h  example.cc  example_advanced.cc  have_built_path_for.h  have_built_path_for_avx2.cc  have_built_path_for_avx512.cc  have_built_path_for_avxvnni.cc  have_built_path_for_sse42.cc  impl.h  internal_matrix.h  (+59 more)
cmake/: add_all_subdirs.cmake  bazel_to_cmake.py  bazel_to_cmake.sh  cc_binary.cmake  cc_library.cmake  cc_test.cmake  run_android_test.sh  ruy_add_all_subdirs.cmake  ruy_cc_binary.cmake  ruy_cc_library.cmake  ruy_cc_test.cmake  ruy_include_directories.cmake  ruy_test_compile_ARM64_SME.cc  ruy_test_compile_ARM64_SME.cmake
doc/: depgraph.sh
example/: BUILD  CMakeLists.txt  example.cc
profiler/: instrumentation.cc  test.cc  test_instrumented_library.cc  treeview.h
ruy/: BUILD  CMakeLists.txt  allocator.cc  allocator.h  allocator_test.cc  apply_multiplier.cc  apply_multiplier.h  apply_multiplier_test.cc  arm64_sme_common.h  benchmark.cc  block_map.cc  block_map.h  block_map_test.cc  blocking_counter.cc  blocking_counter.h  build_defs.bzl  build_defs.oss.bzl  check_macros.cc  check_macros.h  check_macros_test.cc  common.h  context.cc  context.h  context_friend.cc  context_friend.h  context_friend_test.cc  context_internal.cc  context_internal.h  context_internal_test.cc  context_private.cc  context_private.h  context_test.cc  cpu_cache_params.h  cpu_cache_size.h  cpuinfo.cc  cpuinfo.h  create_trmul_params.cc  create_trmul_params.h  ctx.cc  ctx.h  (+96 more)
ruy/example/: BUILD  README.md
ruy/profiler/: BUILD  CMakeLists.txt  instrumentation.cc  instrumentation.h  profiler.cc  profiler.h  test.cc  test_instrumented_library.h  treeview.cc  treeview.h
