# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

module(
    name = "ruy",
    version = "",
    repo_name = "com_google_ruy",
)

# -- bazel_dep definitions -- #
bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "cpuinfo", version = "0.0.0-20240417-3c8b153")
bazel_dep(name = "googletest", version = "1.17.0", repo_name = "com_google_googletest")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.2")
bazel_dep(name = "rules_license", version = "1.0.0")

# -- use_repo_rule statements -- #

# -- repo definitions -- #
